--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   carousel_slider: ^4.1.1
   flutter_rating_bar: ^4.0.1
   sqflite: ^2.0.2
+  badges: ^2.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
