--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   badges: ^2.0.3
   time: ^2.1.1
   intl: ^0.17.0
+  tuple: ^2.0.0
   double_back_to_close_app: ^2.1.0
 dev_dependencies:
   flutter_test:
